Fix #37251: Snap not working correctly in metaball edit mode.

It wasn't enabled in snapping code from the beginning it seems,
but from quick tests snapping for mballs works just fine.

Maybe we could drop out check for edit object type now?